2007-06-20  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc.el (math-standard-ops): Fix precedence of
	multiplication.

2007-06-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc.el (vc-default-log-view-mode): New function.
	(vc-print-log): Add new `log-view-mode' VC operation.

2007-06-20  Juanma Barranquero  <lekktu@gmail.com>

	* ido.el (ido-find-file-in-dir): Don't signal an error for
	empty directories.

	* add-log.el (change-log-mode): Set `show-trailing-whitespace'.

	* desktop.el (desktop-read): Run `desktop-not-loaded-hook' in the
	directory where the desktop file was found, as the docstring says.
	(desktop-kill): Use `read-directory-name'.

2007-06-20  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-mode.el (c-remove-any-local-eval-or-mode-variables):
	When removing lines, also remove the \n.  Correction of patch of
	2007-04-21.

2007-06-20  Martin Rudalics  <rudalics@gmx.at>

	* mouse.el (mouse-drag-mode-line-1): Quit mouse tracking when
	event is not a cons cell.  Do not unread drag-mouse-1 events.
	Select right window in check whether space was stolen from
	window above.

	* help-mode.el (help-make-xrefs): Adjust position of new forward
	button.

2007-06-20  Riccardo Murri  <riccardo.murri@gmail.com>

	* vc-bzr.el (vc-bzr-with-process-environment)
	(vc-bzr-std-process-invocation): New macros.
	(vc-bzr-command, vc-bzr-command*): Use them.
	(vc-bzr-with-c-locale): Remove.
	(vc-bzr-dir-state): Replace its use with vc-bzr-command.
	(vc-bzr-buffer-nonblank-p): New function.
	(vc-bzr-state-words): New const.
	(vc-bzr-state): Look for `bzr status` keywords in output.
	Display everything else as a warning message to the user.
	Fix status report with bzr >= 0.15.

2007-06-20  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-hg.el (vc-hg-global-switches): Simplify.
	(vc-hg-state): Handle more states.
	(vc-hg-diff): Fix doc-string.
	(vc-hg-register): New function.
	(vc-hg-checkout): Likewise.

2007-06-20  Reto Zimmermann  <reto@gnu.org>
